// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataCard props button 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Button
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoDataCard props href 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPanel--isClickable euiCard euiCard--centerAligned euiCard--isClickable"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      <a
        aria-describedby="generated-idDescription"
        class="euiCard__titleAnchor"
        href="#"
        rel="noreferrer"
      >
        Card title
      </a>
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <div
    class="euiCard__footer"
  >
    <button
      class="euiButton euiButton--primary euiButton--fill"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Button
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoDataCard props recommended 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned euiCard--hasBetaBadge"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
  <span
    class="euiCard__betaBadgeWrapper"
  >
    <span
      class="euiBetaBadge euiBetaBadge--hollow euiCard__betaBadge"
      id="generated-idBetaBadge"
      title="Recommended"
    >
      Recommended
    </span>
  </span>
</div>
`;

exports[`NoDataCard renders 1`] = `
<div
  class="euiPanel euiPanel--paddingLarge euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiCard euiCard--centerAligned"
>
  <div
    class="euiCard__content"
  >
    <span
      class="euiTitle euiTitle--small euiCard__title"
      id="generated-idTitle"
    >
      Card title
    </span>
    <div
      class="euiText euiText--small euiCard__description"
      id="generated-idDescription"
    >
      <p>
        Description
      </p>
    </div>
  </div>
</div>
`;
